--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,153 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+/* Adding this line as a test */
+/* Your code starts here! */
+/* Start nav bar code */
+#container{
+	margin: 0 auto;
+	width: 1000px;
+}
+#navbar {
+	height: 50px;
+	background-color: lightgrey;
+	width: 100%;
+	vertical-align: middle;
+	padding-left: 20%;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+}
+#navitems{
+	vertical-align: middle;
+	display: inline-block;
+	padding-right: 20px; 
+}
+#navitems a{
+	padding-right: 25px;
+}
+#navlogo{
+	vertical-align: middle;
+	display: inline-block; 
+}
+/* begin call to action area */
+#calltoaction{
+	margin-top: 100px;
+	vertical-align: middle;
+	text-align: center;
+	margin-bottom: 50px;
+}
+#actiontxt{
+	vertical-align: middle;
+	display: inline-block;
+	width: 47%;
+
+}
+#actionimg{
+	vertical-align: middle;
+	display: inline-block;
+	width: 47%;
+}
+#actiontxt h1{
+	font-size: 73px;
+}
+.wrapper{
+	vertical-align: middle;
+	margin: 25px 3px;
+	align-content: center;
+
+}
+#feat, #about{
+	vertical-align: middle;
+	width: 47%;
+	display: inline-block;
+	padding-left: 5%;
+	margin-left: 3px;
+}
+.middle-img{
+	width: 100%;
+	margin-top: 35px;
+	vertical-align: middle;
+	text-align: center;
+	margin-bottom: 35px;
+}
+#service, #product, #vision{
+	vertical-align: middle;
+	width: 31%;
+	display: inline-block;
+	padding-left: 5%;
+	margin-left: 3px;
+}
+footer{
+	margin-left: 3px;
+	padding-left: 5%;
+	margin-top: 25px;
+}
+#copy{
+	text-align: center;
+}
 
