--- a/css/index.css
+++ b/css/index.css
@@ -103,12 +103,12 @@ ol, ul {
 	list-style: none;
 }
 blockquote, q {
-	quotes: none;
+quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+content: '';
+content: none;
 }
 table {
 	border-collapse: collapse;
@@ -137,6 +137,7 @@ h1, h2, h3, h4, h5 {
 	max-width: 800px;
 	width: 100%;
 }
+
 #navbar {
 	height: 80px;
 	background-color: lightgrey;
@@ -160,7 +161,7 @@ h1, h2, h3, h4, h5 {
 #navitems a{
 	padding-right: 25px;
 }
-#navlogo{
+.navlogo{
 	vertical-align: middle;
 }
 /* begin call to action area */
@@ -169,22 +170,21 @@ h1, h2, h3, h4, h5 {
 	vertical-align: middle;
 	text-align: center;
 	margin-bottom: 50px;
-	display: flex;
+	/* display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content:center;
-
-
+	justify-content: center; */
 }
-#actiontxt{
+
+.actiontxt{
 	vertical-align: middle;
 	margin-bottom: 25px;
-
 }
-#actionimg{
+
+.actionimg{
 	vertical-align: middle;
 }
-#actiontxt h1{
+.actiontxt h1{
 	font-size: 73px;
 }
 
@@ -195,10 +195,10 @@ h1, h2, h3, h4, h5 {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content:center;
-
+	justify-content: center;
 }
-#feat, #about{
+
+#feat, #about {
 	vertical-align: middle;
 	width: 47%;
 	padding-left: 5%;
@@ -226,7 +226,7 @@ footer{
 }
 /* BEGIN MEDIA QUERY */
 @media(max-width: 500px){
-    #actionimg{
+    .actionimg{
         display:none;
     }
     header{
@@ -243,14 +243,14 @@ footer{
 }
 /* BEGIN MEDIA AT 800px */
 @media(max-width: 800px){
-    #actionimg{
+    .actionimg{
         display:none;
     }
     header{
         flex-direction: column;
         align-items: center;
-    }
+}
     h1{
         color:red;
-    }
+}
 }
