--- a/css/index.css
+++ b/css/index.css
@@ -134,35 +134,39 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 /* Start nav bar code */
 #container{
-	max-width: 800px;
+	max-width: 80%;
 	width: 100%;
+	margin: 0 auto;
 }
 
-#navbar {
+header {
 	height: 80px;
 	background-color: lightgrey;
-	width: 100%;
+	width: 80%;
 	vertical-align: middle;
 	position: fixed;
 	top: 0;
 	bottom: 0;
 	right: 0;
 	left: 0;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
+	margin: 0 auto;
 }
 #navitems{
 
-}
-#navitems a{
-	padding-right: 25px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+	align-content: center;
+	vertical-align: middle;
 }
 .navlogo{
 	vertical-align: middle;
+		margin-left: 41%;
+}
+#navitems a{
+	padding-right: 25px;
 }
 /* begin call to action area */
 #calltoaction{
@@ -170,10 +174,12 @@ h1, h2, h3, h4, h5 {
 	vertical-align: middle;
 	text-align: center;
 	margin-bottom: 50px;
-	/* display: flex;
+	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: center; */
+	justify-content: center; 
+	align-items: center;
+	align-content: center;
 }
 
 .actiontxt{
@@ -183,6 +189,7 @@ h1, h2, h3, h4, h5 {
 
 .actionimg{
 	vertical-align: middle;
+	margin: 0 auto;
 }
 .actiontxt h1{
 	font-size: 73px;
@@ -225,6 +232,39 @@ footer{
 	text-align: center;
 }
 /* BEGIN MEDIA QUERY */
+
+/* BEGIN MEDIA AT 800px */
+@media screen and (max-width: 800px){
+	.container{
+		width: 80%;
+		margin: 0 auto;
+	}
+	nav {
+		width: 100%;
+		flex-direction: row;
+		background-color: white;
+		opacity: .9;
+		margin: 0px;
+		padding-top: 15px;
+	}
+    .actionimg{
+        display:none;
+    }
+	
+	#a, #b, #c, #d, #e, #f{
+		order: 1;
+		color:  rgb(1, 64, 136);
+		font-weight: bolder;
+	}
+	#g{
+		order: 0;
+		width: 100%;
+		padding-bottom: 20px;
+	}
+    h1{
+        color:purple;
+}
+}
 @media(max-width: 500px){
     .actionimg{
         display:none;
@@ -239,18 +279,5 @@ footer{
     .wrapper{
         flex-direction: column;
         align-items:center;
-    }
-}
-/* BEGIN MEDIA AT 800px */
-@media(max-width: 800px){
-    .actionimg{
-        display:none;
-    }
-    header{
-        flex-direction: column;
-        align-items: center;
-}
-    h1{
-        color:red;
-}
+	}
 }
